[#805] Name collisions: Add constant for HREF separator